@@ -1,3 +1,8 @@
+2006-03-25  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Source code is now shown in dasm.php
+        * Added source-code lines to the returned opcode array in ea_dasm.c
+
 2006-03-21  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Fixed bug #24
